--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
           to get started.
         </p>
 
-        <p>You know you want to.</p>
+        <p>You <em>know</em> you want to.</p>
       </div>
       <section class="form-container">
-        <form id="signUp_form">
+        <form id="signUp_form" action="/">
           <fieldset class="form-field">
             <legend>Let's do this!</legend>
             <div class="form-row">
-              <div class="form-item">
+              <div class="form-item input-control">
                 <label for="firstName">First Name</label>
                 <input
                   type="text"
@@ -65,8 +65,9 @@
                   autocomplete="given-name"
                   required
                 />
+                <div class="error"></div>
               </div>
-              <div class="form-item">
+              <div class="form-item input-control">
                 <label for="lastName">Last Name</label>
                 <input
                   type="text"
@@ -77,11 +78,12 @@
                   autocomplete="family-name"
                   required
                 />
+                <div class="error"></div>
               </div>
             </div>
 
             <div class="form-row">
-              <div class="form-item">
+              <div class="form-item input-control">
                 <label for="email">Email</label>
                 <input
                   type="email"
@@ -92,8 +94,9 @@
                   autocomplete="email"
                   required
                 />
+                <div class="error"></div>
               </div>
-              <div class="form-item">
+              <div class="form-item input-control">
                 <label for="phone">Phone Number</label>
                 <input
                   type="tel"
@@ -106,11 +109,12 @@
                   autocomplete="tel"
                   required
                 />
+                <div class="error"></div>
               </div>
             </div>
 
             <div class="form-row">
-              <div class="form-item">
+              <div class="form-item input-control">
                 <label for="password">Password</label>
                 <input
                   type="password"
@@ -121,8 +125,9 @@
                   autocomplete="new-password"
                   required
                 />
+                <div class="error"></div>
               </div>
-              <div class="form-item">
+              <div class="form-item input-control">
                 <label for="confirmPassword">Confirm Password</label>
                 <input
                   type="password"
@@ -133,13 +138,14 @@
                   autocomplete="new-password"
                   required
                 />
+                <div class="error"></div>
               </div>
             </div>
 
             <button
               type="submit"
-              style="display: none"
               id="hiddenSubmitButton"
+              style="display: none"
             ></button>
           </fieldset>
         </form>
@@ -148,7 +154,7 @@
       <div class="form__button-container">
         <button id="submitFormBtn" class="submit-button">Create Account</button>
 
-        <p>Already have an Account? <a href="#">Log in</a></p>
+        <p>Already have an Account? <a href="#" class="link">Log in</a></p>
       </div>
     </div>
   </body>
