--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <fieldset class="form-field">
             <legend>Let's do this!</legend>
             <div class="form-row">
-              <div class="form-item input-control">
+              <div class="form-group" id="firstNameGroup">
                 <label for="firstName">First Name</label>
                 <input
                   type="text"
@@ -65,9 +65,9 @@
                   autocomplete="given-name"
                   required
                 />
-                <div class="error"></div>
+                <span class="error-message"></span>
               </div>
-              <div class="form-item input-control">
+              <div class="form-group" id="lastNameGroup">
                 <label for="lastName">Last Name</label>
                 <input
                   type="text"
@@ -78,12 +78,12 @@
                   autocomplete="family-name"
                   required
                 />
-                <div class="error"></div>
+                <span class="error-message"></span>
               </div>
             </div>
 
             <div class="form-row">
-              <div class="form-item input-control">
+              <div class="form-group" id="emailGroup">
                 <label for="email">Email</label>
                 <input
                   type="email"
@@ -94,9 +94,9 @@
                   autocomplete="email"
                   required
                 />
-                <div class="error"></div>
+                <span class="error-message"></span>
               </div>
-              <div class="form-item input-control">
+              <div class="form-group" id="phoneGroup">
                 <label for="phone">Phone Number</label>
                 <input
                   type="tel"
@@ -109,12 +109,12 @@
                   autocomplete="tel"
                   required
                 />
-                <div class="error"></div>
+                <span class="error-message"></span>
               </div>
             </div>
 
             <div class="form-row">
-              <div class="form-item input-control">
+              <div class="form-group" id="passwordGroup">
                 <label for="password">Password</label>
                 <input
                   type="password"
@@ -125,9 +125,9 @@
                   autocomplete="new-password"
                   required
                 />
-                <div class="error"></div>
+                <span class="error-message"></span>
               </div>
-              <div class="form-item input-control">
+              <div class="form-group" id="confirmPasswordGroup">
                 <label for="confirmPassword">Confirm Password</label>
                 <input
                   type="password"
@@ -138,7 +138,7 @@
                   autocomplete="new-password"
                   required
                 />
-                <div class="error"></div>
+                <span class="error-message"></span>
               </div>
             </div>
 
